# circulus

./: .gitignore  .pre-commit-config.yaml  404.html  ReadMe.md  circulus_workspace.code-workspace  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ci.yaml  publish.yaml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
SUMMARY/: index.html
_static/: mathjax.js
app/: render.html  server.py
archive/: ReadMe.md  sparse.py
benchmarking/: lc_ladder.ipynb
circulax/: __init__.py  compiler.py  netlist.py  s_transforms.py  utils.py
circulax/components/: base_component.py  electronic.py  photonic.py
circulax/solvers/: __init__.py  assembly.py  linear.py  transient.py
circulus/: __init__.py  _version.py  base_component.py  compiler.py  components.py  decorator_approach.py  models.py  netlist.py  photonic_components.py  s_transforms.py  solver.py  utils.py
circulus/benchmarking/: lc_ladder.ipynb
circulus/components/: base_component.py  electronic.py  photonic.py
circulus/solvers/: __init__.py  assembly.py  common.py  dc.py  dense.py  linear.py  sparse.py  strategies.py  transient.py
docs/: SUMMARY.md  gen_doc_stubs.py  hooks.py  index.md  writing_components.md
docs/_static/: mathjax.js  writing_components.md
docs/stylesheets/: extra.css
examples/: LCR.ipynb  LC_ladder.ipynb  diode_clipper.ipynb  diode_clipper.py  lc_ladder.ipynb  lc_ladder.py  lrc.ipynb  lrc.py  mos_diff_pair.ipynb  mos_diff_pair.py  mzm.ipynb  photonics.ipynb  photonics.py  photonics_transient.ipynb  photonics_transient.py  resistor_ladder.ipynb  resistor_ladder.py  sax_integration.py
examples/LCR/: index.html
examples/LC_ladder/: index.html
examples/diode_clipper/: index.html
examples/mos_diff_pair/: index.html
examples/mzm/: index.html
examples/photonics_transient/: index.html
examples/resistor_ladder/: index.html
gen_doc_stubs/: index.html
hooks/: index.html
references/: index.html
references/_version/: index.html
references/compiler/: index.html
references/components/: index.html
references/components/base_component/: index.html
references/components/electronic/: index.html
references/components/photonic/: index.html
references/netlist/: index.html
references/s_transforms/: index.html
references/solvers/: index.html
references/solvers/assembly/: index.html
references/solvers/linear/: index.html
references/solvers/transient/: index.html
references/utils/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_compiler.py  test_components.py  test_dc.py  test_dense.py  test_lrc.py  test_models.py  test_netlist.py  test_notebooks.py  test_sparse.py  test_transient.py
writing_components/: index.html
