[project]
name = "circulus"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "ruff",
    "klujax>=0.4.5,<0.5", 
    "jax>=0.8.1,<0.9", 
    "diffrax>=0.7.0,<0.8", 
    "sax>=0.15.15,<0.16",
    "matplotlib",
    "typing-extensions>=4.13.2",
    "lineax"
]


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel>=6.29.5",
  "hippogriffe==0.2.2",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-jupyter",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "pymdown-extensions==10.14.3"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]

#[tool.pixi.tasks]
#lint = "ruff lint"

#[tool.pixi.feature.test.dependencies]
#pytest = "*"
#
#[tool.pixi.feature.test.tasks]
#test = "pytest"
#
#[tool.pixi.environments]
#test = ["test"]
#
[tool.pixi.dependencies]
python = "==3.12"
tqdm = ">=4.67.1,<5"


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
copy_readme = "cp ReadMe.md docs/index.md"
copy-examples = "rm -rf docs/examples/*.ipynb && mkdir -p docs/examples && cp -r examples/* docs/examples/"
install_ipkernel  = "python -m ipykernel install --user --name circulus"
docs-serve = { cmd = ["mkdocs", "serve"], depends-on = ["copy_readme", "copy-examples", "install_ipkernel"] }
