[project]
name = "circulus"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "ruff",
    "jax>=0.7.1,<0.8", 
    "jaxlib>=0.7.1,<0.8",
    "diffrax>=0.7.0,<0.8", 
    "sax>=0.15.15,<0.16",
    "matplotlib",
    "typing-extensions>=4.13.2",
    "lineax"
]


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel>=6.29.5",
  "hippogriffe==0.2.2",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-jupyter",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "pymdown-extensions",
  "schemdraw",
  "papermill",
  "mkdocs_matplotlib",
  #"mkdocs-bibtex",
  "mkautodoc>=0.2.0",
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-bibtex>=4.4.0",
  "mkdocs-material>=9.6.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numpy.exceptions.ComplexWarning",
    "ignore:Complex dtype support in Diffrax:UserWarning"
]



[tool.pixi.pypi-dependencies]


[tool.pixi.dependencies]
python = "==3.13.12"
tqdm = ">=4.67.1,<5"


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
copy_readme = "cp ReadMe.md docs/index.md"
clean_old_docs = "rm -rf docs/examples/*.ipynb || true"
copy-examples = {cmd = ["mkdir","-p","docs/examples", "&&", "cp", "-r", "examples/*", "docs/examples/"], depends-on = ["clean_old_docs",] }
install_ipkernel  = "python -m ipykernel install --user --name circulus"
docs-serve = { cmd = ["mkdocs", "serve", "-w", "docs"], depends-on = ["copy_readme", "copy-examples", "install_ipkernel"] }
pytest_run = "pytest tests"
lint = "ruff lint"
