[project]
name = "circulus"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "ruff",
    "jax>=0.7.1,<0.8", 
    "jaxlib>=0.7.1,<0.8",
    "diffrax>=0.7.0,<0.8", 
    "sax>=0.15.15,<0.16",
    "matplotlib",
    "typing-extensions>=4.13.2",
    "lineax"
]


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel>=6.29.5",
  "hippogriffe==0.2.2",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-jupyter",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "pymdown-extensions",
  "schemdraw",
  "papermill",
  "mkdocs_matplotlib",
  #"mkdocs-bibtex",
  "mkautodoc>=0.2.0",
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-bibtex>=4.4.0",
  "mkdocs-material>=9.6.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numpy.exceptions.ComplexWarning",
    "ignore:Complex dtype support in Diffrax:UserWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:papermill",
]

[tool.pixi.pypi-dependencies]


[tool.pixi.dependencies]
python = "==3.13.12"
tqdm = ">=4.67.1,<5"


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
copy_readme = "cp ReadMe.md docs/index.md"
clean_old_docs = "rm -rf docs/examples/*.ipynb || true"
copy-examples = {cmd = ["mkdir","-p","docs/examples", "&&", "cp", "-r", "examples/*", "docs/examples/"], depends-on = ["clean_old_docs",] }
install_ipkernel  = "python -m ipykernel install --user --name circulus"
docs-serve = { cmd = ["mkdocs", "serve", "-w", "docs"], depends-on = ["copy_readme", "copy-examples", "install_ipkernel"] }
pytest_run = "pytest tests"
lint_format = "ruff format"
lint_check = "ruff -v check"


[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
  "COM812",  # missing-trailing-comma
  "D105",  # undocumented-magic-method
  "D203",  # incorrect-blank-line-before-class
  "D213",  # multi-line-summary-second-line
  "E741",  # ambiguous-variable-name
  "ERA001",  # commented-out-code
  "FIX001",  # line-contains-fixme
  "FIX002",  # line-contains-todo
  "FIX004",  # line-contains-hack
  "N803",  # invalid-argument-name
  "N806",  # non-lowercase-variable-in-function
  "PD901",  # pandas-df-variable-name
  "PLC0414",  # useless-import-alias
  "PLC0415",  # import-outside-top-level
  "PLR0913",  # too-many-arguments
  "PLR2004",  # magic-value-comparison
  "PLW2901",  # redefined-loop-name
  "RET504",  # unnecessary-assign
  "RUF002",  # ambiguous-unicode-character-docstring
  "S324",  # hashlib-insecure-hash-function
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
  "TD001",  # invalid-todo-tag
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
  "TID252",  # relative-imports
  "TRY003",  # raise-vanilla-args
  "UP013"  # convert-typed-dict-functional-to-class
]
select = ["ALL"]
